fix position of off screen header whem menu is open

--- a/less/modules/off-screen-menu.less
+++ b/less/modules/off-screen-menu.less
@@ -34,8 +34,12 @@
 }
 
 //
-// Off screen menu header logo
+// Off screen menu header
 // ---
+.off-screen-header {
+    min-height: @off-screen-header-min-height;
+}
+
 .off-screen-header__logo {
     min-width: 150px;
     max-width: 250px;
@@ -74,11 +78,12 @@
 
             & ~ .off-screen-header {
                 .translate(@off-screen-menu-width, 0);
+                .position(fixed, 0, 0, auto, 0); // prevent scrolling of header when menu is active
             }
 
             & ~ .page-wrapper {
                 .translate(@off-screen-menu-width, 0);
-                position: fixed; // prevent scrolling of page when menu is active
+                .position(fixed, @off-screen-header-min-height, 0, 0, 0); // prevent scrolling of page when menu is active
             }
         }
     }
@@ -158,6 +163,7 @@
         width: @off-screen-menu-width;
         height: 100%;
         height: 100vh;
+        padding-bottom: @off-screen-menu-padding-bottom;
         background-color: @colour-white;
         .off-screen-menu-transition();
 
